xgettext: Go: Improve heuristic for format strings.
* gettext-tools/src/format-go.c (struct spec): Add field
'likely_intentional_directives'.
(format_parse): Set it to the number of directives that don't contain a space.
(format_is_unlikely_intentional): New function.
(formatstring_go): Use it.
* gettext-tools/tests/format-go-3: New file.
* gettext-tools/tests/Makefile.am (TESTS): Add it.

--- a/gettext-tools/tests/Makefile.am
+++ b/gettext-tools/tests/Makefile.am
@@ -204,7 +204,7 @@ TESTS = gettext-1 gettext-2 \
 	format-elisp-1 format-elisp-2 format-elisp-3 \
 	format-gcc-internal-1 format-gcc-internal-2 \
 	format-gfc-internal-1 format-gfc-internal-2 \
-	format-go-1 format-go-2 \
+	format-go-1 format-go-2 format-go-3 \
 	format-java-1 format-java-2 \
 	format-java-printf-1 format-java-printf-2 \
 	format-javascript-1 format-javascript-2 \
