xgettext: PHP: Improve heuristic for format strings.
* gettext-tools/src/format-php.c (struct spec): Add field
'likely_intentional_directives'.
(format_parse): Set it to the number of directives that don't contain a space.
(format_is_unlikely_intentional): New function.
(formatstring_php): Use it.
* gettext-tools/tests/format-php-3: New file.
* gettext-tools/tests/Makefile.am (TESTS): Add it.

--- a/gettext-tools/tests/Makefile.am
+++ b/gettext-tools/tests/Makefile.am
@@ -214,7 +214,7 @@ TESTS = gettext-1 gettext-2 \
 	format-lisp-1 format-lisp-2 \
 	format-lua-1 format-lua-2 \
 	format-modula2-1 format-modula2-2 \
-	format-php-1 format-php-2 \
+	format-php-1 format-php-2 format-php-3 \
 	format-python-1 format-python-2 \
 	format-python-brace-1 format-python-brace-2 \
 	format-pascal-1 format-pascal-2 \
