xgettext: Tcl: Improve heuristic for format strings.
* gettext-tools/src/format-tcl.c (struct spec): Add field
'likely_intentional_directives'.
(format_parse): Set it to the number of directives that don't contain a space.
(format_is_unlikely_intentional): New function.
(formatstring_tcl): Use it.
* gettext-tools/tests/format-tcl-3: New file.
* gettext-tools/tests/Makefile.am (TESTS): Add it.

--- a/gettext-tools/tests/Makefile.am
+++ b/gettext-tools/tests/Makefile.am
@@ -227,7 +227,7 @@ TESTS = gettext-1 gettext-2 \
 	format-rust-1 format-rust-2 \
 	format-scheme-1 format-scheme-2 \
 	format-sh-1 format-sh-2 \
-	format-tcl-1 format-tcl-2 \
+	format-tcl-1 format-tcl-2 format-tcl-3 \
 	format-ycp-1 format-ycp-2 \
 	plural-1 plural-2 plural-3 plural-4 \
 	gettextpo-1 sentence-1 \
