--- a/gettext-tools/libgettextpo/Makefile.am
+++ b/gettext-tools/libgettextpo/Makefile.am
@@ -1,5 +1,5 @@
 ## Makefile for the gettext-tools/libgettextpo subdirectory of GNU gettext
-## Copyright (C) 1995-2024 Free Software Foundation, Inc.
+## Copyright (C) 1995-2025 Free Software Foundation, Inc.
 ##
 ## This program is free software: you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -156,7 +156,7 @@ endif
 all check install: config.h
 config.h: $(BUILT_SOURCES)
 	{ echo '/* DO NOT EDIT! GENERATED AUTOMATICALLY! */'; \
-	  : "Avoid double inclusion, to avoid a warning about redefinition of DLL_VARIABLE."; \
+	  : "Avoid double inclusion, to avoid a warning about redefinition of DLL_VARIABLE and LIBGETTEXTSRC_DLL_VARIABLE."; \
 	  echo '#ifndef GTPO_CONFIG_H'; \
 	  echo '#define GTPO_CONFIG_H'; \
 	  echo; \
@@ -169,6 +169,8 @@ config.h: $(BUILT_SOURCES)
 	  : "No references to variables in other libraries exist."; \
 	  echo '#undef DLL_VARIABLE'; \
 	  echo '#define DLL_VARIABLE'; \
+	  echo '#undef LIBGETTEXTSRC_DLL_VARIABLE'; \
+	  echo '#define LIBGETTEXTSRC_DLL_VARIABLE'; \
 	  echo; \
 	  echo '#endif /* GTPO_CONFIG_H */'; \
 	} > config.h && \
