Fix compilation error on MSVC due to conflict of different stdlib.h files.
Reported by Kirill Makurin <maiddaisuki@outlook.com> in
<https://lists.gnu.org/archive/html/bug-gettext/2025-05/msg00071.html>.

* autogen.sh: Change gnulib-tool invocation for libgrep.
* gettext-tools/configure.ac (AC_CONFIG_FILES): Add libgrep/gnulib-lib/Makefile.
* gettext-tools/libgrep/Makefile.am: Don't include Makefile.gnulib.
(SUBDIRS): New variable.
(noinst_LIBRARIES): Add libgrep.a.
(AM_CPPFLAGS): Add -I options for gnulib-lib subdirectory.
(libgrep_a_DEPENDENCIES): New variable.
* gettext-tools/libgrep/gnulib-lib/Makefile.am: New file.
* gettext-tools/src/Makefile.am (LIBGREP): Add ../libgrep/gnulib-lib/libgnu.a.

--- a/.gitignore
+++ b/.gitignore
@@ -360,65 +360,9 @@
 /gettext-tools/libgettextpo/xstriconv.h
 /gettext-tools/libgettextpo/xvasprintf.c
 /gettext-tools/libgettextpo/xvasprintf.h
-/gettext-tools/libgrep/glthread/
 /gettext-tools/libgrep/gnulib-m4/
-/gettext-tools/libgrep/malloc/
-/gettext-tools/libgrep/Makefile.gnulib
-/gettext-tools/libgrep/_Noreturn.h
-/gettext-tools/libgrep/arg-nonnull.h
-/gettext-tools/libgrep/attribute.h
-/gettext-tools/libgrep/btowc.c
-/gettext-tools/libgrep/c++defs.h
-/gettext-tools/libgrep/cdefs.h
-/gettext-tools/libgrep/dynarray.h
-/gettext-tools/libgrep/fcntl.in.h
-/gettext-tools/libgrep/intprops-internal.h
-/gettext-tools/libgrep/intprops.h
-/gettext-tools/libgrep/inttypes.in.h
-/gettext-tools/libgrep/iswblank.c
-/gettext-tools/libgrep/iswctype-impl.h
-/gettext-tools/libgrep/iswctype.c
-/gettext-tools/libgrep/iswdigit.c
-/gettext-tools/libgrep/iswpunct.c
-/gettext-tools/libgrep/iswxdigit.c
-/gettext-tools/libgrep/langinfo.in.h
-/gettext-tools/libgrep/libc-config.h
-/gettext-tools/libgrep/limits.in.h
-/gettext-tools/libgrep/locale.in.h
-/gettext-tools/libgrep/localeconv.c
-/gettext-tools/libgrep/malloc.c
-/gettext-tools/libgrep/mbrlen.c
-/gettext-tools/libgrep/mbszero.c
-/gettext-tools/libgrep/mbtowc-impl.h
-/gettext-tools/libgrep/mbtowc.c
-/gettext-tools/libgrep/nl_langinfo.c
-/gettext-tools/libgrep/nl_langinfo-lock.c
-/gettext-tools/libgrep/pthread.in.h
-/gettext-tools/libgrep/pthread-once.c
-/gettext-tools/libgrep/regcomp.c
-/gettext-tools/libgrep/regex.c
-/gettext-tools/libgrep/regex.h
-/gettext-tools/libgrep/regex_internal.c
-/gettext-tools/libgrep/regex_internal.h
-/gettext-tools/libgrep/regexec.c
-/gettext-tools/libgrep/sched.in.h
-/gettext-tools/libgrep/stdckdint.in.h
-/gettext-tools/libgrep/stddef.in.h
-/gettext-tools/libgrep/stdint.in.h
-/gettext-tools/libgrep/stdlib.c
-/gettext-tools/libgrep/stdlib.in.h
-/gettext-tools/libgrep/sys_types.in.h
-/gettext-tools/libgrep/time.in.h
-/gettext-tools/libgrep/unistd.c
-/gettext-tools/libgrep/unistd.in.h
-/gettext-tools/libgrep/warn-on-use.h
-/gettext-tools/libgrep/wchar.in.h
-/gettext-tools/libgrep/wcrtomb.c
-/gettext-tools/libgrep/wctype-h.c
-/gettext-tools/libgrep/wctype-impl.h
-/gettext-tools/libgrep/wctype.c
-/gettext-tools/libgrep/wctype.in.h
-/gettext-tools/libgrep/windows-initguard.h
+/gettext-tools/libgrep/gnulib-lib/
+!/gettext-tools/libgrep/gnulib-lib/Makefile.am
 /gettext-tools/man/x-to-1.in
 /gettext-tools/tests/gnulib-m4/
 /gettext-tools/tests/gnulib-lib/
@@ -972,23 +916,6 @@ core
 /gettext-tools/libgettextpo/uniwidth.h
 /gettext-tools/libgettextpo/wchar.h
 /gettext-tools/libgettextpo/wctype.h
-/gettext-tools/libgrep/fcntl.h
-/gettext-tools/libgrep/inttypes.h
-/gettext-tools/libgrep/langinfo.h
-/gettext-tools/libgrep/limits.h
-/gettext-tools/libgrep/locale.h
-/gettext-tools/libgrep/pthread.h
-/gettext-tools/libgrep/sched.h
-/gettext-tools/libgrep/stdbool.h
-/gettext-tools/libgrep/stdckdint.h
-/gettext-tools/libgrep/stddef.h
-/gettext-tools/libgrep/stdint.h
-/gettext-tools/libgrep/stdlib.h
-/gettext-tools/libgrep/time.h
-/gettext-tools/libgrep/unistd.h
-/gettext-tools/libgrep/wchar.h
-/gettext-tools/libgrep/wctype.h
-/gettext-tools/libgrep/sys/types.h
 /gettext-tools/po/??@*.insert-header
 /gettext-tools/src/gettext.res
 /gettext-tools/src/libxgettextts1.a
