build: Fix some crashes when building with --enable-shared on MSVC.
Reported by Kirill Makurin <maiddaisuki@outlook.com> in
<https://lists.gnu.org/archive/html/bug-gettext/2025-05/msg00087.html>.

* gnulib-local/lib/gl_carray_list.h.diff: New file.
* gnulib-local/lib/gl_hash_map.h.diff: New file.
* gnulib-local/lib/gl_hash_set.h.diff: New file.
* gnulib-local/Makefile.am (EXTRA_DIST): Add them.

--- a/gnulib-local/Makefile.am
+++ b/gnulib-local/Makefile.am
@@ -34,6 +34,9 @@ lib/getlocalename_l-unsafe.c.diff \
 lib/getopt-core.h.diff \
 lib/gettext.h \
 lib/gl_array_list.h.diff \
+lib/gl_carray_list.h.diff \
+lib/gl_hash_map.h.diff \
+lib/gl_hash_set.h.diff \
 lib/gl_linkedhash_list.h.diff \
 lib/libxml/buf.c \
 lib/libxml/buf.h \
