--- a/gettext-runtime/configure.ac
+++ b/gettext-runtime/configure.ac
@@ -238,6 +238,26 @@ dnl Determine variables used by uninstalled-config.sh.
 ENABLE_SHARED="$enable_shared"
 AC_SUBST([ENABLE_SHARED])
 
+dnl Test for features used in install-tests.
+dnl shlibpath_var and PATH_SEPARATOR are set by LT_INIT.
+if test $USE_INCLUDED_LIBINTL = yes; then
+  INSTALLED_LIBINTL="-lintl $INTL_MACOSX_LIBS"
+else
+  INSTALLED_LIBINTL=
+fi
+AC_SUBST([INSTALLED_LIBINTL])
+AC_SUBST([PATH_SEPARATOR])
+if test -n "${shlibpath_var}"; then
+  if test "${shlibpath_var}" = PATH; then
+    AUGMENT_SHLIBPATH="PATH='\$(bindir)'${PATH_SEPARATOR}\"\$\$PATH\";"
+  else
+    AUGMENT_SHLIBPATH="${shlibpath_var}='\$(libdir)':\"\$\$${shlibpath_var}\"; export ${shlibpath_var};"
+  fi
+else
+  AUGMENT_SHLIBPATH=
+fi
+AC_SUBST([AUGMENT_SHLIBPATH])
+
 AC_CONFIG_SUBDIRS([intl])
 
 AC_CONFIG_SUBDIRS([libasprintf])
@@ -270,5 +290,7 @@ AC_CONFIG_FILES([man/x-to-1])
 AC_CONFIG_FILES([m4/Makefile])
 
 AC_CONFIG_FILES([tests/Makefile])
+
+AC_CONFIG_FILES([install-tests/Makefile])
 
 AC_OUTPUT
